k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hayyacom-cms-ingress
  labels:
    app: hayyacom-cms
    environment: production
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: hayyacom-prod-cms-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:130854680578:certificate/49287a40-28c2-4cda-8796-7fb1f17d0fb0
    alb.ingress.kubernetes.io/healthcheck-path: /readiness
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-south-1:130854680578:regional/webacl/hayyacom-production-waf/bb542235-cba0-4770-a2f5-3ee0262fc6e8
spec:
  ingressClassName: alb
  rules:
    - host: cms.hayyacom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hayyacom-cms
                port:
                  number: 80
